1.1.0 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added getHelpTable() and getHelpText() methods to ezcConsoleInput for more
  convenient help output generation.

1.0.1 - Monday 06 March 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed unreported bug: ezcConsoleOutput::toPos() has a typo in a parameter.
- Fixed unreported bug: ezcConsoleOption::__construct() still threw old
  exception style. Now throws correct ezcConsoleInvalidOptionNameException on
  an invalid option name.
- Fixed bug #7897: Access to 'step' property does not work through overloading
  in ezcConsoleProgressbar.
- Fixed bug #7923: ezcConsoleInput::getSynopsis() does not work when
  supplying parameters to show.

ezcConsoleProgressbar
---------------------

- Added support for a non-integer maximum.
- Added an optional parameter to the advance() method that advances the
  progress bar with a different step size than 1.
- Added formatting options for %max% and %act%.



1.0 - Monday 30 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed unreported bug: ezcConsoleTableOptions struct caried deprecated
  options and missed 2 in its constructor.
- Fixed unreported bug: Option values not properly checked for ezcConsoleTable,
  ezcConsoleOutput.
- Fixed unreported bug: ezcConsoleProgressbarOptions disallowed option
  read access.
- Fixed unreported bug: ezcConsoleTable "colWrap" option not recognized
  correctly.
- Fixed unreported bug: ezcConsoleTable "defaultFormat" and
  "defaultBorderFormat" not recognized.
- Fixed notice in ezcConsoleOptionExclusionViolationException.


1.0rc1 - Monday 16 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added redrawFrequency option to ezcConsoleProgressbar to allow less redraws
  than advance() is called. This allows the progress measuring of huge numbers